--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,18 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
 }
 
 header {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #333;
     color: white;
     padding: 10px 0;
     text-align: center;
 }
+
 
 header nav ul {
     list-style-type: none;
@@ -33,7 +35,50 @@ header nav ul li a {
     background-color: white;
     border-radius: 8px;
 }
+.carousel-container {
+        position: relative;
+        width: 70%;
+        height: 60rem; /* Ajusta la altura según tus necesidades */
+        overflow: hidden; /* Oculta las imágenes fuera del área visible */
+        display: flex;
+        justify-content: center; /* Centra el contenido horizontalmente */
+        align-items: center; /* Centra el contenido verticalmente */
+    }
 
+.carousel {
+    display: flex;
+    transition: transform 0.5s ease;
+    object-fit: cover;
+}
+.carousel img {
+    width: 100%;
+    height: max-content;
+}
+.prev {
+    left: 10px;
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    transform: translateY(-50%);
+}
+
+.next {
+    right: 10px;
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    transform: translateY(-50%);
+}
 h1 {
     color: #333;
 }
