--- a/styles.css
+++ b/styles.css
@@ -200,7 +200,7 @@ h1 {
 }
 
 .toggle-section {
-    background-color: #00a859;
+    background-color: #140202;
     color: white;
     font-size: 1.2rem;
     padding: 12px 24px;
