--- a/styles.css
+++ b/styles.css
@@ -439,3 +439,85 @@ h1 {
     margin-left: 10px;
     vertical-align: middle;
 }
+#envio {
+    margin-top: 20px;
+    padding: 20px;
+    background-color: #f4f4f4;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#envio h2 {
+    margin-bottom: 10px;
+}
+
+#envio form {
+    margin-bottom: 15px;
+}
+
+#envio select, #envio button {
+    padding: 10px;
+    margin: 10px 0;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+#envio button {
+    background-color: #007BFF;
+    color: white;
+    cursor: pointer;
+}
+
+#envio button:hover {
+    background-color: #0056b3;
+}
+
+#costo-envio {
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+#actualizar-carrito {
+    background-color: #28a745;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+#actualizar-carrito:hover {
+    background-color: #218838;
+}
+/* Aseguramos que las categorías estén ocultas por defecto */
+.product-slider {
+    display: none; /* Ocultar las categorías de productos */
+    margin-top: 10px;
+}
+
+/* Mostrar las categorías cuando la clase 'active' esté presente */
+.product-slider.active {
+    display: block;
+}
+
+.toggle-section {
+    cursor: pointer;
+    font-size: 18px;
+    margin-left: 10px;
+}
+
+h1 {
+    cursor: pointer;
+}
+
+/* Estilos adicionales para los productos */
+.product-card {
+    margin-bottom: 20px;
+}
+
+.product-card img {
+    max-width: 100%;
+    height: auto;
+}
