--- a/styles.css
+++ b/styles.css
@@ -521,3 +521,39 @@ h1 {
     max-width: 100%;
     height: auto;
 }
+/* Contenedor principal del formulario */
+.form-section {
+    max-width: 800px;
+    padding: 20px;
+    background-color: #ffffff;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    text-align: center;
+  
+    /* Para centrar la sección en el medio de la pantalla */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  /* Estilo del título dentro de la sección del formulario */
+  .form-section h2 {
+    font-size: 26px;
+    color: #1a73e8;
+    font-weight: bold;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #1a73e8;
+    display: inline-block;
+    padding-bottom: 10px;
+  }
+  
+  /* Estilo para el iframe del formulario */
+  .form-section iframe {
+    border: none;
+    width: 100%;
+    height: auto;
+    min-height: 800px;
+    max-height: 1354px;
+  }
+  
