--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #d3d1d1;
 }
 
 header {
@@ -522,20 +522,4 @@ h1 {
     height: auto;
 }
 /* Estilo para hacer el iframe responsivo */
-.form-section {
-    position: relative;
-    padding-bottom: 56.25%; /* Mantiene la proporción 16:9 */
-    height: 0;
-    overflow: hidden;
-    max-width: 100%;
-    background: #f0f0f0;
-}
 
-.form-section iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: none;
-}
